--- a/shelter/index.html
+++ b/shelter/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style/normalize.css">
+    <link rel="stylesheet" href="src/style/style.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+    // Здесь будет шапка сайта. Обычно в ней располагается логотип, контактная информация, меню
+    </header>
     
+    <main>
+        <article class="heroBanner"><h1>heroBanner</h1></article>
+        <article class="about">about</article>
+        <article class="ourFriends">ourFriends</article>
+        <article class="help">help</article>
+        <article class="inAddition">inAddition</article>
+    </main>
+    
+    <footer>
+    // Подвал сайта. Обычно здесь находится контактная информация, дополнительное меню, юридическая информация о компании
+    </footer>
 </body>
 </html>
