--- a/shelter/index.html
+++ b/shelter/index.html
@@ -9,12 +9,43 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-    // Здесь будет шапка сайта. Обычно в ней располагается логотип, контактная информация, меню
+
+    <header class="header-main">
+        <div class="wrapper wrapper-header">
+            <div class="header-content">
+                <div class="logo">
+                    <div class="logo-title">Cozy House</div>
+                    <div class="logo-subtitle">Shelter for pets in Boston</div>
+                </div>
+                <nav class="nav-main">
+                    <ul>
+                        <li><a href="" class="link link_active">About the shelter</a></li>
+                        <li><a href="" class="link">Our pets</a></li>
+                        <li><a href="" class="link">Help the shelter</a></li>
+                        <li><a href="" class="link">Contacts</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
     
     <main>
-        <article class="heroBanner"><h1>heroBanner</h1></article>
+
+        <article class="hero-banner">
+            <div class="wrapper">
+                <div class="hero-banner-content">
+                    <div class="hero-banner-text">
+                        <h1>Not only people<br> need a house</h1>
+                        <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
+                        <a href="" class="button-rectangle-primary"></a>
+                    </div>
+                    <div class="hero-banner-img">
+
+                    </div>
+                </div>
+            </div>
+        </article>
+
         <article class="about">about</article>
         <article class="ourFriends">ourFriends</article>
         <article class="help">help</article>
@@ -22,7 +53,7 @@
     </main>
     
     <footer>
-    // Подвал сайта. Обычно здесь находится контактная информация, дополнительное меню, юридическая информация о компании
+    // Подвал сайта. Обычн о здесь находится контактная информация, дополнительное меню, юридическая информация о компании
     </footer>
 </body>
 </html>
