--- a/shelter/index.html
+++ b/shelter/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style/normalize.css">
+    <!-- <link rel="stylesheet" href="src/style/normalize.css"> -->
     <link rel="stylesheet" href="src/style/style.css">
     <title>Document</title>
 </head>
 <body>
 
     <header class="header-main">
-        <div class="wrapper wrapper-header">
+        <div class="wrapper">
             <div class="header-content">
                 <div class="logo">
                     <div class="logo-title">Cozy House</div>
@@ -37,7 +37,7 @@
                     <div class="hero-banner-text">
                         <h1>Not only people<br> need a house</h1>
                         <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
-                        <a href="" class="button-rectangle-primary"></a>
+                        <a href="" class="button-rectangle-primary">Make a friend</a>
                     </div>
                     <div class="hero-banner-img">
 
