--- a/shelter/index.html
+++ b/shelter/index.html
@@ -36,24 +36,186 @@
                 <div class="hero-banner-content">
                     <div class="hero-banner-text">
                         <h1>Not only people<br> need a house</h1>
-                        <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
+                        <p>
+                            We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
+                        </p>
                         <a href="" class="button-rectangle-primary">Make a friend</a>
                     </div>
-                    <div class="hero-banner-img">
+                    <div class="hero-banner-img"></div>
+                </div>
+            </div>
+        </article>
 
+        <article class="about">
+            <div class="wrapper">
+                <div class="about-content">
+                    <div class="about-img"></div>
+                    <div class="about-text">
+                        <h3>About the shelter<br> “Cozy House”</h3>
+                        <p>
+                            Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.
+                        </p>
+                        <p>
+                            We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.
+                        </p>
                     </div>
                 </div>
             </div>
         </article>
 
-        <article class="about">about</article>
-        <article class="ourFriends">ourFriends</article>
-        <article class="help">help</article>
-        <article class="inAddition">inAddition</article>
+        <article class="ourFriends">
+            <div class="wrapper">
+                <div class="ourFriends-content">  
+                    <h3>Our friends who<br> are looking for a house</h3>
+                    <div class="carousel-wrapper">
+                        <div class="button-round prev-item">
+                            <img src="src/img/icon/arrow-to-left.svg" alt="preview">
+                        </div>
+                        <div class="carousel-items-conteiner">
+                            <div class="card-mini">
+                                <img src="src/img/modal/katrine.png" alt="Katrine">
+                                <h4>Katrine</h4>
+                                <div class="button-rectangle-secondary">Learn more</div>
+                            </div>
+                            <div class="card-mini">
+                                <img src="src/img/modal/jennifer.png" alt="Jennifer">
+                                <h4>Jennifer</h4>
+                                <div class="button-rectangle-secondary">Learn more</div>
+                            </div>
+                            <div class="card-mini">
+                                <img src="src/img/modal/woody.png" alt="Woody">
+                                <h4>Woody</h4>
+                                <div class="button-rectangle-secondary">Learn more</div>
+                            </div>
+                            <div class="card-mini">
+                                <img src="src/img/modal/sophia.png" alt="Sophia">
+                                <h4>Sophia</h4>
+                                <div class="button-rectangle-secondary">Learn more</div>
+                            </div>
+                            <div class="card-mini">
+                                <img src="src/img/modal/timmy.png" alt="Timmy">
+                                <h4>Timmy</h4>
+                                <div class="button-rectangle-secondary">Learn more</div>
+                            </div>
+                            <div class="card-mini">
+                                <img src="src/img/modal/charly.png" alt="Charly">
+                                <h4>Charly</h4>
+                                <div class="button-rectangle-secondary">Learn more</div>
+                            </div>
+                            <div class="card-mini">
+                                <img src="src/img/modal/scarlett.png" alt="Scarlett">
+                                <h4>Scarlett</h4>
+                                <div class="button-rectangle-secondary">Learn more</div>
+                            </div>
+                            <div class="card-mini">
+                                <img src="src/img/modal/freddie.png" alt="Freddie">
+                                <h4>Freddie</h4>
+                                <div class="button-rectangle-secondary">Learn more</div>
+                            </div> 
+                        </div>
+                        <div class="button-round next-item">
+                            <img src="src/img/icon/arrow-to-right.svg" alt="next">
+                        </div>
+                    </div>
+                    <a href="" class="button-rectangle-primary">Get to know the rest</a>
+                </div>
+            </div>
+        </article>
+
+        <article class="help">
+            <div class="wrapper">
+                <div class="help-content">
+                    <h3>How you can help<br> our shelter</h3>
+                    <div class="help-items-conteiner">
+                        <div class="help-item">
+                            <img src="src/img/icon/icon-pet-food.svg" alt="Pet food">
+                            <p>Pet food</p>
+                        </div>
+                        <div class="help-item">
+                            <img src="src/img/icon/icon-transportation.svg" alt="Transportation">
+                            <p>Transportation</p>
+                        </div>
+                        <div class="help-item">
+                            <img src="src/img/icon/icon-toys.svg" alt="Toys">
+                            <p>Toys</p>
+                        </div>
+                        <div class="help-item">
+                            <img src="src/img/icon/icon-bowls-and-cups.svg" alt="Bowls and cups">
+                            <p>Bowls and cups</p>
+                        </div>
+                        <div class="help-item">
+                            <img src="src/img/icon/icon-shampoos.svg" alt="Shampoos">
+                            <p>Shampoos</p>
+                        </div>
+                        <div class="help-item">
+                            <img src="src/img/icon/icon-vitamins.svg" alt="Vitamins">
+                            <p>Vitamins</p>
+                        </div>
+                        <div class="help-item">
+                            <img src="src/img/icon/icon-medicines.svg" alt="Medicines">
+                            <p>Medicines</p>
+                        </div>
+                        <div class="help-item">
+                            <img src="src/img/icon/icon-collars-leashes.svg" alt="Collars leashes">
+                            <p>Collars / leashes</p>
+                        </div>
+                        <div class="help-item">
+                            <img src="src/img/icon/icon-sleeping-area.svg" alt="Sleeping areas">
+                            <p>Sleeping areas</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
+
+        <article class="donation">
+            <div class="wrapper">
+                <div class="donation-content">
+                    <div class="donation-img"></div>
+                    <div class="donation-text">
+                        <h3>You can also<br> make a donation</h3>
+                        <h5>Name of the bank / Type of bank account</h5>
+                        <div class="credit-card">
+                            <img src="src/img/icon/credit-card.svg" alt="credit card">
+                            <p>8380 2880 8028 8791 7435</p>
+                        </div>
+                        <p>
+                            Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </article>
     </main>
     
     <footer>
-    // Подвал сайта. Обычн о здесь находится контактная информация, дополнительное меню, юридическая информация о компании
+        <div class="wrapper">
+            <div class="footer-content">
+                <div class="footer-info">
+                    <h3>For questions<br> and suggestions</h3>
+                    <div class="icon-text">
+                        <img src="src/img/icon/icon-email.svg" alt="email">
+                        <p>email@shelter.com</p>
+                    </div>
+                    <div class="icon-text">
+                        <img src="src/img/icon/icon-phone.svg" alt="phone">
+                        <p>+13 674 567 75 54</p>
+                    </div>
+                </div>
+                <div class="footer-info">
+                    <h3>We are waiting<br> for your visit</h3>
+                    <div class="icon-text">
+                        <img src="src/img/icon/icon-marker.svg" alt="adress1">
+                        <p>1 Central Street, Boston<br> (entrance from the store)</p>
+                    </div>
+                    <div class="icon-text">
+                        <img src="src/img/icon/icon-marker.svg" alt="adress2">
+                        <p>18 South Park, London </p>
+                    </div>
+                </div>                
+                <div class="footer-img"></div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
