--- a/shelter/index.html
+++ b/shelter/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="src/style/normalize.css"> -->
     <link rel="stylesheet" href="src/style/style.css">
     <title>Document</title>
 </head>
@@ -51,7 +50,7 @@
                 <div class="about-content">
                     <div class="about-img"></div>
                     <div class="about-text">
-                        <h3>About the shelter<br> “Cozy House”</h3>
+                        <h3>About the shelter<br>&#8220;Cozy House&#8221;</h3>
                         <p>
                             Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.
                         </p>
