--- a/shelter/index.html
+++ b/shelter/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="image/x-icon" href="src/img/fav.ico" rel="shortcut icon">
+    <link type="Image/x-icon" href="src/img/fav.ico" rel="icon">
     <link rel="stylesheet" href="src/style/style.css">
     <title>Document</title>
 </head>
@@ -12,16 +14,16 @@
     <header class="header-main">
         <div class="wrapper">
             <div class="header-content">
-                <div class="logo">
+                <a href="#" class="logo">
                     <div class="logo-title">Cozy House</div>
                     <div class="logo-subtitle">Shelter for pets in Boston</div>
-                </div>
+                </a>
                 <nav class="nav-main">
                     <ul>
-                        <li><a href="" class="link link_active">About the shelter</a></li>
-                        <li><a href="" class="link">Our pets</a></li>
-                        <li><a href="" class="link">Help the shelter</a></li>
-                        <li><a href="" class="link">Contacts</a></li>
+                        <li><div class="link link_active">About the shelter</div></li>
+                        <li><a href="our-pets.html" class="link">Our pets</a></li>
+                        <li><a href="#help" class="link">Help the shelter</a></li>
+                        <li><a href="#contacts" class="link">Contacts</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,7 +40,7 @@
                         <p>
                             We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
                         </p>
-                        <a href="" class="button-rectangle-primary">Make a friend</a>
+                        <a href="#ourFriends" class="button-rectangle-primary">Make a friend</a>
                     </div>
                     <div class="hero-banner-img"></div>
                 </div>
@@ -62,7 +64,7 @@
             </div>
         </article>
 
-        <article class="ourFriends">
+        <article class="ourFriends" id="ourFriends">
             <div class="wrapper">
                 <div class="ourFriends-content">  
                     <h3>Our friends who<br> are looking for a house</h3>
@@ -116,12 +118,12 @@
                             <img src="src/img/icon/arrow-to-right.svg" alt="next">
                         </div>
                     </div>
-                    <a href="" class="button-rectangle-primary">Get to know the rest</a>
+                    <a href="our-pets.html" class="button-rectangle-primary">Get to know the rest</a>
                 </div>
             </div>
         </article>
 
-        <article class="help">
+        <article class="help" id="help">
             <div class="wrapper">
                 <div class="help-content">
                     <h3>How you can help<br> our shelter</h3>
@@ -174,10 +176,10 @@
                     <div class="donation-text">
                         <h3>You can also<br> make a donation</h3>
                         <h5>Name of the bank / Type of bank account</h5>
-                        <div class="credit-card">
+                        <a href="#" class="credit-card">
                             <img src="src/img/icon/credit-card.svg" alt="credit card">
                             <p>8380 2880 8028 8791 7435</p>
-                        </div>
+                        </a>
                         <p>
                             Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                         </p>
@@ -187,30 +189,30 @@
         </article>
     </main>
     
-    <footer>
+    <footer id="contacts">
         <div class="wrapper">
             <div class="footer-content">
                 <div class="footer-info">
                     <h3>For questions<br> and suggestions</h3>
-                    <div class="icon-text">
+                    <a href="mailto:email@shelter.com" class="icon-text">
                         <img src="src/img/icon/icon-email.svg" alt="email">
                         <p>email@shelter.com</p>
-                    </div>
-                    <div class="icon-text">
+                    </a>
+                    <a href="tel:+136745677554" class="icon-text">
                         <img src="src/img/icon/icon-phone.svg" alt="phone">
                         <p>+13 674 567 75 54</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="footer-info">
                     <h3>We are waiting<br> for your visit</h3>
-                    <div class="icon-text">
+                    <a href="https://goo.gl/maps/UTvu4mgTLNsehXE26" target="_blank" class="icon-text">
                         <img src="src/img/icon/icon-marker.svg" alt="adress1">
                         <p>1 Central Street, Boston<br> (entrance from the store)</p>
-                    </div>
-                    <div class="icon-text">
+                    </a>
+                    <a href="https://goo.gl/maps/P4bEA28FV9zSEpkeA" target="_blank" class="icon-text">
                         <img src="src/img/icon/icon-marker.svg" alt="adress2">
-                        <p>18 South Park, London </p>
-                    </div>
+                        <p>18 South Park, London</p>
+                    </a>
                 </div>                
                 <div class="footer-img"></div>
             </div>
