--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="image/x-icon" href="src/img/fav.ico" rel="shortcut icon">
+    <link type="Image/x-icon" href="src/img/fav.ico" rel="icon">
     <link rel="stylesheet" href="src/style/style.css">
     <title>Document</title>
 </head>
@@ -12,16 +14,16 @@
     <header class="header-main header-main_light">
         <div class="wrapper">
             <div class="header-content header-content_light">
-                <div class="logo">
+                <a href="index.html" class="logo">
                     <div class="logo-title">Cozy House</div>
                     <div class="logo-subtitle">Shelter for pets in Boston</div>
-                </div>
+                </a>
                 <nav class="nav-main">
                     <ul>
-                        <li><a href="" class="link link-onlight link-onlight_active">About the shelter</a></li>
-                        <li><a href="" class="link link-onlight">Our pets</a></li>
-                        <li><a href="" class="link link-onlight">Help the shelter</a></li>
-                        <li><a href="" class="link link-onlight">Contacts</a></li>
+                        <li><a href="index.html" class="link link-onlight">About the shelter</a></li>
+                        <li><div class="link link-onlight link-onlight_active">Our pets</div></li>
+                        <li><a href="index.html#help" class="link link-onlight">Help the shelter</a></li>
+                        <li><a href="#contacts" class="link link-onlight">Contacts</a></li>
                     </ul>
                 </nav>
             </div>
@@ -33,7 +35,7 @@
         <article class="ourFriends">
             <div class="wrapper">
                 <div class="ourFriends-content">  
-                    <h3>Our friends who<br> are looking for a house</h3>
+                    <h1>Our friends who<br> are looking for a house</h1>
                     <div class="grid-conteiner">
                         <div class="card-mini">
                             <img src="src/img/modal/katrine.png" alt="Katrine">
@@ -88,30 +90,30 @@
         </article>
     </main>
     
-    <footer>
+    <footer id="contacts">
         <div class="wrapper">
             <div class="footer-content">
                 <div class="footer-info">
                     <h3>For questions<br> and suggestions</h3>
-                    <div class="icon-text">
+                    <a href="mailto:email@shelter.com" class="icon-text">
                         <img src="src/img/icon/icon-email.svg" alt="email">
                         <p>email@shelter.com</p>
-                    </div>
-                    <div class="icon-text">
+                    </a>
+                    <a href="tel:+136745677554" class="icon-text">
                         <img src="src/img/icon/icon-phone.svg" alt="phone">
                         <p>+13 674 567 75 54</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="footer-info">
                     <h3>We are waiting<br> for your visit</h3>
-                    <div class="icon-text">
+                    <a href="https://goo.gl/maps/UTvu4mgTLNsehXE26" target="_blank" class="icon-text">
                         <img src="src/img/icon/icon-marker.svg" alt="adress1">
                         <p>1 Central Street, Boston<br> (entrance from the store)</p>
-                    </div>
-                    <div class="icon-text">
+                    </a>
+                    <a href="https://goo.gl/maps/P4bEA28FV9zSEpkeA" target="_blank" class="icon-text">
                         <img src="src/img/icon/icon-marker.svg" alt="adress2">
-                        <p>18 South Park, London </p>
-                    </div>
+                        <p>18 South Park, London</p>
+                    </a>
                 </div>                
                 <div class="footer-img"></div>
             </div>
