--- a/shelter/index.html
+++ b/shelter/index.html
@@ -218,5 +218,6 @@
             </div>
         </div>
     </footer>
+    <script type="text/javascript" src="src/JS/index.js"></script>
 </body>
 </html>
