--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -7,7 +7,7 @@
     <link type="image/x-icon" href="src/img/fav.ico" rel="shortcut icon">
     <link type="Image/x-icon" href="src/img/fav.ico" rel="icon">
     <link rel="stylesheet" href="src/style/style.css">
-    <title>Document</title>
+    <title>Shelter - Our pets</title>
 </head>
 <body>
 
