fix: pixel perfect

--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -38,42 +38,42 @@
                     <h1>Our friends who<br> are looking for a house</h1>
                     <div class="grid-conteiner">
                         <div class="card-mini">
-                            <img src="src/img/modal/katrine.png" alt="Katrine">
+                            <img src="src/img/pets/katrine.png" alt="Katrine">
                             <h4>Katrine</h4>
                             <div class="button-rectangle-secondary">Learn more</div>
                         </div>
                         <div class="card-mini">
-                            <img src="src/img/modal/jennifer.png" alt="Jennifer">
+                            <img src="src/img/pets/jennifer.png" alt="Jennifer">
                             <h4>Jennifer</h4>
                             <div class="button-rectangle-secondary">Learn more</div>
                         </div>
                         <div class="card-mini">
-                            <img src="src/img/modal/woody.png" alt="Woody">
+                            <img src="src/img/pets/woody.png" alt="Woody">
                             <h4>Woody</h4>
                             <div class="button-rectangle-secondary">Learn more</div>
                         </div>
                         <div class="card-mini">
-                            <img src="src/img/modal/sophia.png" alt="Sophia">
+                            <img src="src/img/pets/sophia.png" alt="Sophia">
                             <h4>Sophia</h4>
                             <div class="button-rectangle-secondary">Learn more</div>
                         </div>
                         <div class="card-mini">
-                            <img src="src/img/modal/timmy.png" alt="Timmy">
+                            <img src="src/img/pets/timmy.png" alt="Timmy">
                             <h4>Timmy</h4>
                             <div class="button-rectangle-secondary">Learn more</div>
                         </div>
                         <div class="card-mini">
-                            <img src="src/img/modal/charly.png" alt="Charly">
+                            <img src="src/img/pets/charly.png" alt="Charly">
                             <h4>Charly</h4>
                             <div class="button-rectangle-secondary">Learn more</div>
                         </div>
                         <div class="card-mini">
-                            <img src="src/img/modal/scarlett.png" alt="Scarlett">
+                            <img src="src/img/pets/scarlett.png" alt="Scarlett">
                             <h4>Scarlett</h4>
                             <div class="button-rectangle-secondary">Learn more</div>
                         </div>
                         <div class="card-mini">
-                            <img src="src/img/modal/freddie.png" alt="Freddie">
+                            <img src="src/img/pets/freddie.png" alt="Freddie">
                             <h4>Freddie</h4>
                             <div class="button-rectangle-secondary">Learn more</div>
                         </div> 
@@ -106,11 +106,11 @@
                 </div>
                 <div class="footer-info">
                     <h3>We are waiting<br> for your visit</h3>
-                    <a href="https://goo.gl/maps/UTvu4mgTLNsehXE26" target="_blank" class="icon-text">
+                    <a href="https://goo.gl/maps/UTvu4mgTLNsehXE26" target="_blank" class="icon-text icon-text_place">
                         <img src="src/img/icon/icon-marker.svg" alt="adress1">
                         <p>1 Central Street, Boston<br> (entrance from the store)</p>
                     </a>
-                    <a href="https://goo.gl/maps/P4bEA28FV9zSEpkeA" target="_blank" class="icon-text">
+                    <a href="https://goo.gl/maps/P4bEA28FV9zSEpkeA" target="_blank" class="icon-text icon-text_place">
                         <img src="src/img/icon/icon-marker.svg" alt="adress2">
                         <p>18 South Park, London</p>
                     </a>
