feat: implement tablet view

--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -32,7 +32,7 @@
     <div class="first-empty"></div>
     
     <main>
-        <article class="ourFriends">
+        <section class="ourFriends">
             <div class="wrapper">
                 <div class="ourFriends-content">  
                     <h1>Our friends who<br> are looking for a house</h1>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
             </div>
-        </article>
+        </section>
     </main>
     
     <footer id="contacts">
