--- a/shelter/index.html
+++ b/shelter/index.html
@@ -32,7 +32,7 @@
     
     <main>
 
-        <article class="hero-banner">
+        <section class="hero-banner">
             <div class="wrapper">
                 <div class="hero-banner-content">
                     <div class="hero-banner-text">
@@ -45,9 +45,9 @@
                     <div class="hero-banner-img"></div>
                 </div>
             </div>
-        </article>
+        </section>
 
-        <article class="about">
+        <section class="about">
             <div class="wrapper">
                 <div class="about-content">
                     <div class="about-img"></div>
@@ -62,9 +62,9 @@
                     </div>
                 </div>
             </div>
-        </article>
+        </section>
 
-        <article class="ourFriends" id="ourFriends">
+        <section class="ourFriends" id="ourFriends">
             <div class="wrapper">
                 <div class="ourFriends-content">  
                     <h3>Our friends who<br> are looking for a house</h3>
@@ -121,9 +121,9 @@
                     <a href="our-pets.html" class="button-rectangle-primary">Get to know the rest</a>
                 </div>
             </div>
-        </article>
+        </section>
 
-        <article class="help" id="help">
+        <section class="help" id="help">
             <div class="wrapper">
                 <div class="help-content">
                     <h3>How you can help<br> our shelter</h3>
@@ -148,8 +148,6 @@
                             <img src="src/img/icon/icon-shampoos.svg" alt="Shampoos">
                             <p>Shampoos</p>
                         </div>
-                    </div>
-                    <div class="help-items-conteiner help-items-conteiner_line2">
                         <div class="help-item">
                             <img src="src/img/icon/icon-vitamins.svg" alt="Vitamins">
                             <p>Vitamins</p>
@@ -169,9 +167,9 @@
                     </div>
                 </div>
             </div>
-        </article>
+        </section>
 
-        <article class="donation">
+        <section class="donation">
             <div class="wrapper">
                 <div class="donation-content">
                     <div class="donation-img"></div>
@@ -188,7 +186,7 @@
                     </div>
                 </div>
             </div>
-        </article>
+        </section>
     </main>
     
     <footer id="contacts">
