feat: implement mobile view

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -169,7 +169,7 @@
             </div>
         </section>
 
-        <section class="donation">
+        <!-- <section class="donation">
             <div class="wrapper">
                 <div class="donation-content">
                     <div class="donation-img"></div>
@@ -186,7 +186,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
     
     <footer id="contacts">
@@ -218,6 +218,7 @@
             </div>
         </div>
     </footer>
+
     <script src="src/JS/index.js"></script>
 </body>
 </html>
