feat: implement header mobile

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -18,6 +18,8 @@
                     <div class="logo-title">Cozy House</div>
                     <div class="logo-subtitle">Shelter for pets in Boston</div>
                 </a>
+                <div class="header-main__menu-icon">
+                </div>
                 <nav class="nav-main">
                     <ul>
                         <li><div class="link link_active">About the shelter</div></li>
@@ -169,7 +171,7 @@
             </div>
         </section>
 
-        <!-- <section class="donation">
+        <section class="donation">
             <div class="wrapper">
                 <div class="donation-content">
                     <div class="donation-img"></div>
@@ -186,7 +188,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
     
     <footer id="contacts">
@@ -220,5 +222,6 @@
     </footer>
 
     <script src="src/JS/index.js"></script>
+    <script src="src/JS/header.js"></script>
 </body>
 </html>
