--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -18,7 +18,8 @@
                     <div class="logo-title">Cozy House</div>
                     <div class="logo-subtitle">Shelter for pets in Boston</div>
                 </a>
-                <nav class="nav-main">
+                <div class="header-main__menu-icon"></div>
+                <nav class="nav-main nav-main_light">
                     <ul>
                         <li><a href="index.html" class="link link-onlight">About the shelter</a></li>
                         <li><div class="link link-onlight link-onlight_active">Our pets</div></li>
@@ -119,5 +120,6 @@
             </div>
         </div>
     </footer>
+    <script src="src/JS/header.js"></script>
 </body>
 </html>
