--- a/shelter/index.html
+++ b/shelter/index.html
@@ -195,7 +195,7 @@
         <div class="wrapper">
             <div class="footer-content">
                 <div class="footer-info">
-                    <h3>For questions<br> and suggestions</h3>
+                    <h3>For questions and suggestions</h3>
                     <a href="mailto:email@shelter.com" class="icon-text">
                         <img src="src/img/icon/icon-email.svg" alt="email">
                         <p>email@shelter.com</p>
@@ -206,7 +206,7 @@
                     </a>
                 </div>
                 <div class="footer-info">
-                    <h3>We are waiting<br> for your visit</h3>
+                    <h3>We are waiting for your visit</h3>
                     <a href="https://goo.gl/maps/UTvu4mgTLNsehXE26" target="_blank" class="icon-text icon-text_place">
                         <img src="src/img/icon/icon-marker.svg" alt="adress1">
                         <p>1 Central Street, Boston<br> (entrance from the store)</p>
