feat: implement menu behavior

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -18,8 +18,8 @@
                     <div class="logo-title">Cozy House</div>
                     <div class="logo-subtitle">Shelter for pets in Boston</div>
                 </a>
-                <div class="header-main__menu-icon">
-                </div>
+                <div class="header-main__menu-icon"><span></span></div>
+                <div class="header-main__dimmer"></div>
                 <nav class="nav-main">
                     <ul>
                         <li><div class="link link_active">About the shelter</div></li>
