--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -18,7 +18,10 @@
                     <div class="logo-title">Cozy House</div>
                     <div class="logo-subtitle">Shelter for pets in Boston</div>
                 </a>
-                <div class="header-main__menu-icon"></div>
+                <div class="header-main__menu-icon">
+                    <span></span>
+                </div>
+                <div class="header-main__dimmer"></div>
                 <nav class="nav-main nav-main_light">
                     <ul>
                         <li><a href="index.html" class="link link-onlight">About the shelter</a></li>
