--- a/shelter/index.html
+++ b/shelter/index.html
@@ -74,48 +74,11 @@
                         <div class="button-round prev-item">
                             <img src="src/img/icon/arrow-to-left.svg" alt="preview">
                         </div>
-                        <div class="carousel-items-conteiner">
-                            <div class="card-mini">
-                                <img src="src/img/pets/katrine.png" alt="Katrine">
-                                <h4>Katrine</h4>
-                                <div class="button-rectangle-secondary">Learn more</div>
+                        <div class="carousel-items-wrapper">
+                            <div class="carousel-items-conteiner">
+                            
                             </div>
-                            <div class="card-mini">
-                                <img src="src/img/pets/jennifer.png" alt="Jennifer">
-                                <h4>Jennifer</h4>
-                                <div class="button-rectangle-secondary">Learn more</div>
-                            </div>
-                            <div class="card-mini">
-                                <img src="src/img/pets/woody.png" alt="Woody">
-                                <h4>Woody</h4>
-                                <div class="button-rectangle-secondary">Learn more</div>
-                            </div>
-                            <div class="card-mini">
-                                <img src="src/img/pets/sophia.png" alt="Sophia">
-                                <h4>Sophia</h4>
-                                <div class="button-rectangle-secondary">Learn more</div>
-                            </div>
-                            <div class="card-mini">
-                                <img src="src/img/pets/timmy.png" alt="Timmy">
-                                <h4>Timmy</h4>
-                                <div class="button-rectangle-secondary">Learn more</div>
-                            </div>
-                            <div class="card-mini">
-                                <img src="src/img/pets/charly.png" alt="Charly">
-                                <h4>Charly</h4>
-                                <div class="button-rectangle-secondary">Learn more</div>
-                            </div>
-                            <div class="card-mini">
-                                <img src="src/img/pets/scarlett.png" alt="Scarlett">
-                                <h4>Scarlett</h4>
-                                <div class="button-rectangle-secondary">Learn more</div>
-                            </div>
-                            <div class="card-mini">
-                                <img src="src/img/pets/freddie.png" alt="Freddie">
-                                <h4>Freddie</h4>
-                                <div class="button-rectangle-secondary">Learn more</div>
-                            </div> 
-                        </div>
+                        </div>                        
                         <div class="button-round next-item">
                             <img src="src/img/icon/arrow-to-right.svg" alt="next">
                         </div>
@@ -223,5 +186,6 @@
 
     <script src="src/JS/index.js"></script>
     <script src="src/JS/header.js"></script>
+    <script src="src/JS/carousel.js"></script>
 </body>
 </html>
