refactor: change self-esteem

--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -41,46 +41,7 @@
                 <div class="ourFriends-content">  
                     <h1>Our friends who<br> are looking for a house</h1>
                     <div class="grid-conteiner">
-                        <!-- <div class="card-mini">
-                            <img src="src/img/pets/katrine.png" alt="Katrine">
-                            <h4>Katrine</h4>
-                            <div class="button-rectangle-secondary">Learn more</div>
-                        </div>
-                        <div class="card-mini">
-                            <img src="src/img/pets/jennifer.png" alt="Jennifer">
-                            <h4>Jennifer</h4>
-                            <div class="button-rectangle-secondary">Learn more</div>
-                        </div>
-                        <div class="card-mini">
-                            <img src="src/img/pets/woody.png" alt="Woody">
-                            <h4>Woody</h4>
-                            <div class="button-rectangle-secondary">Learn more</div>
-                        </div>
-                        <div class="card-mini">
-                            <img src="src/img/pets/sophia.png" alt="Sophia">
-                            <h4>Sophia</h4>
-                            <div class="button-rectangle-secondary">Learn more</div>
-                        </div>
-                        <div class="card-mini">
-                            <img src="src/img/pets/timmy.png" alt="Timmy">
-                            <h4>Timmy</h4>
-                            <div class="button-rectangle-secondary">Learn more</div>
-                        </div>
-                        <div class="card-mini">
-                            <img src="src/img/pets/charly.png" alt="Charly">
-                            <h4>Charly</h4>
-                            <div class="button-rectangle-secondary">Learn more</div>
-                        </div>
-                        <div class="card-mini">
-                            <img src="src/img/pets/scarlett.png" alt="Scarlett">
-                            <h4>Scarlett</h4>
-                            <div class="button-rectangle-secondary">Learn more</div>
-                        </div>
-                        <div class="card-mini">
-                            <img src="src/img/pets/freddie.png" alt="Freddie">
-                            <h4>Freddie</h4>
-                            <div class="button-rectangle-secondary">Learn more</div>
-                        </div>  -->
+                       
                     </div>
                     <div class="pagination">
                         <div class="button-round button-round_inactive" id="btn-first-page"><p>&#60;&#60;</p></div>
@@ -123,6 +84,7 @@
             </div>
         </div>
     </footer>
+    <script src="src/JS/index.js"></script>
     <script src="src/JS/header.js"></script>
     <script src="src/JS/pagination.js"></script>
 </body>
