feat: implement popup

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -184,8 +184,18 @@
         </div>
     </footer>
 
+    <!-- Pop-up -->
+    <div class="popup">
+        <div class="popup__wrapper">
+            <div class="popup__content">
+
+            </div>
+        </div>
+    </div>
+
     <script src="src/JS/index.js"></script>
     <script src="src/JS/header.js"></script>
     <script src="src/JS/carousel.js"></script>
+    <script src="src/JS/popup.js"></script>
 </body>
 </html>
