--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -84,8 +84,19 @@
             </div>
         </div>
     </footer>
+
+    <!-- Pop-up -->
+    <div class="popup">
+        <div class="popup__wrapper">
+            <div class="popup__content">
+
+            </div>
+        </div>
+    </div>
+
     <script src="src/JS/index.js"></script>
     <script src="src/JS/header.js"></script>
     <script src="src/JS/pagination.js"></script>
+    <script src="src/JS/popup.js"></script>
 </body>
 </html>
