feat: rework layout and add burger menu

--- a/migration-newip-to-ts/src/index.html
+++ b/migration-newip-to-ts/src/index.html
@@ -9,10 +9,16 @@
     <body>
         <header>
             <h1>News Portal</h1>
+            <div class="menu">
+                <div class="line">
+            </div>
         </header>
         <main>
-            <div class="sources buttons"></div>
-            <div class="news"></div>
+            <div class="sources buttons">
+                <h3>Portals</h3>
+            </div>
+            <div class="news">
+            </div>
         </main>
         <footer class="footer">
             <div class="footer__authors">
@@ -79,6 +85,6 @@
             </div>
         </template>
 
-        <script src="./index.js"></script>
+        
     </body>
 </html>
